# folia_embedded

./: .gitignore  LICENSE  build.sh  deploy_console.sh  readme.md  training_architecture.md
embedded/: .gitignore  TUNING_PARAMETERS.md  platformio.ini
embedded/docs/: edge_impulse_data_format.md  edge_impulse_deployment.md
embedded/lib/ads1220_driver/: library.json
embedded/lib/ads1220_driver/include/: ads1220.hpp
embedded/lib/ads1220_driver/src/: ads1220.cpp
embedded/lib/ei_model/: README.txt  library.json
embedded/lib/ei_model/model-parameters/: model_metadata.h  model_variables.h
embedded/lib/ei_model/tflite-model/: tflite_learn_916506_3_compiled.cpp  tflite_learn_916506_3_compiled.h
embedded/lib/gait_filter/: README.md  library.json
embedded/lib/gait_filter/src/: gait_filter.cpp
embedded/lib/hal_library/: library.json
embedded/src/: timed.hpp
embedded/src/app/: control.cpp  control.hpp  ei_classifier.cpp  ei_classifier.hpp  flags.hpp  imu_packet.hpp  indicator.cpp  indicator.hpp  main.cpp  main_prelude.hpp  network.cpp  network.hpp  util.cpp  util.hpp  vertiq_motor.cpp  vertiq_motor.hpp
embedded/test/: test_parseMTData2.cpp
proto/: Packet.proto
pyviz/: .gitignore  README.md  ROTATION_COMPARISON.md  analyze_notebook.py  logger.py  pyeskf.pyi  pyproject.toml  train.py  verify_trials.py
pyviz/filter3/: common.py  data_loader.py  filter3.py  filter4.py  mathutil.py  stance.py
pyviz/ins_tools/: ins.py
pyviz/scripts/: sent.py  spawner.py  test_eskf.py
pyviz/scripts/junk/: forward_01.mcap  usefulslop
pyviz/utils/: rmse_interpolation.py
(+16 files in other folders)
