[project]
name = "pyviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.2",
    "ezc3d>=1.5.19",
    "foxglove-schemas-protobuf>=0.3.0",
    "foxglove-sdk>=0.9.0",
    "foxglove-websocket>=0.1.2",
    "hmmlearn>=0.3.3",
    "ipykernel>=6.29.5",
    "jax>=0.8.0",
    "litgen>=0.20.0",
    "matplotlib>=3.10.3",
    "mcap>=1.3.0",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "optax>=0.2.6",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "polars>=1.35.1",
    "protobuf>=6.31.1",
    "pyserial>=3.5",
    "pytest>=8.4.2",
    "pytz>=2025.2",
    "rednose>=1.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "scipy-stubs>=1.16.0.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pandas-stubs>=2.3.2.250926",
]

[tool.uv]
# Note: uv.scripts section is not supported in current uv version
# Use `uv run python -m myapp.main` or `uv run pytest` directly

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
